breadcrumb spacing fix for ripple

--- a/src/app/styles/breadcrumb.scss
+++ b/src/app/styles/breadcrumb.scss
@@ -1,10 +1,12 @@
+$breadcrumb-padding: 8px;
+
 .breadcrumb > li {
 
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: $breadcrumb-padding;
+  padding-bottom: $breadcrumb-padding;
 
-  margin-top: -8px;
-  margin-bottom: -8px;
+  margin-top: -$breadcrumb-padding;
+  margin-bottom: -$breadcrumb-padding;
 
   overflow-y: hidden;
 
@@ -16,4 +18,16 @@
     margin-left: 0;
   }
 
+  &.dropdown {
+    overflow-y: visible;
+  }
+
+}
+
+.breadcrumb {
+  padding-top: $breadcrumb-padding;
+  padding-bottom: $breadcrumb-padding;
+  > * {
+    vertical-align: text-top;
+  }
 }
